--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -6,7 +6,7 @@ h1 {
 }
 
 form {
-  max-width: 400px; /* Limit the width of the form for better aesthetics */
+  width: 400px; /* Limit the width of the form for better aesthetics */
   margin: 0 auto;   /* Center the form */
   padding: 20px;
   background-color: #fff;
