--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -4,18 +4,6 @@ ul {
   align-items: center;
 }
 
-li {
-  margin: 0 15px; /* Adds spacing between navigation items */
-}
-
-li:first-child {
-  margin-left: 0; /* Removes margin for the first item */
-}
-
-li:last-child {
-  margin-right: 0; /* Removes margin for the last item */
-}
-
 NavLink {
   text-decoration: none; /* Removes default link underline */
   color: #333; /* Sets default link color */
@@ -33,8 +21,8 @@ NavLink.active {
 
 /* Profile Dropdown Styles */
 .profile-dropdown {
+  flex-direction: column;
   position: absolute; /* Positions the dropdown relative to the button */
-  top: 40px; /* Adjust based on your design */
   right: 0; /* Aligns dropdown to the right of the button */
   width: 200px; /* Adjust width as needed */
   border: 1px solid #ddd; /* Adds a subtle border */
@@ -74,8 +62,8 @@ NavLink.active {
 }
 
 .home-logo {
-  width: 50px;     /* Adjust as needed */
-  height: auto;    /* Keeps the aspect ratio of the image */
+  margin: 10px;
+  height: 40px;    /* Keeps the aspect ratio of the image */
   display: block;  /* Makes the image a block element to remove unwanted space */
 }
 
