--- a/frontend/src/components/SpotTile/SpotTile.css
+++ b/frontend/src/components/SpotTile/SpotTile.css
@@ -1,60 +1,25 @@
 .spot-tile {
-  display: flex;
-  align-items: center;
-  border: 1px solid #e0e0e0;
-  padding: 10px;
-  margin: 10px 0;
-  text-decoration: none; /* Remove underline for Link */
-  color: black; /* Default text color */
-  transition: background-color 0.2s;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  transition: box-shadow 0.3s;
 }
 
 .spot-tile:hover {
-  background-color: #f5f5f5;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .spot-thumbnail {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  max-height: 200px;
   object-fit: cover;
-  margin-right: 15px;
   border-radius: 5px;
 }
 
 .spot-info {
-  display: flex;
-  flex-direction: column;
+  margin-top: 0.5rem;
 }
 
-.spot-city-state {
-  font-size: 12px;
-  color: #888;
-}
-
-.spot-name {
-  font-size: 16px;
-  font-weight: bold;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 150px;
-}
-
-.spot-rating {
-  font-size: 14px;
-  color: #444;
-  margin: 5px 0;
-}
-
-.spot-price {
-  font-size: 16px;
-  color: #333;
-}
-
-/* LandingPage CSS */
-.spots-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
+.spot-name, .spot-city-state, .spot-price {
+  display: block;
+  margin: 0.2rem 0;
 }
