--- a/frontend/src/components/SpotDetail/SpotDetail.css
+++ b/frontend/src/components/SpotDetail/SpotDetail.css
@@ -7,36 +7,39 @@
   border-radius: 8px;
   padding: 1rem;
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Images */
 
 .spot-images {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 2rem;
 }
 
 .large-image {
-  width: 100%;
-  max-height: 400px;
-  object-fit: cover;
-  border-radius: 8px;
+  flex: 2;  /* take more space */
+  max-width: 60%; /* max width for the larger image */
+  height: auto;
 }
 
 .small-images {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 1rem;
+  flex: 1;  /* take less space */
+  display: grid;
+  grid-template-columns: 1fr 1fr;  /* 2x2 grid layout */
+  gap: 10px; /* spacing between small images */
+  justify-items: center;
+  align-items: center;
 }
 
 .small-image {
-  width: calc(20% - 8px);  /* 20% width for each of the 4 images, minus 8px for a small margin */
-  height: 100px;
+  max-width: 100%;
+  height: auto;
   object-fit: cover;
-  margin: 0 1rem;
-  border-radius: 4px;
 }
 
 /* Details */
