Spot Details Renaming

--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -1,6 +1,6 @@
-/* SpotDetail.css */
+/* SpotDetails.css */
 
-.spot-detail-container {
+.spot-details-container {
   width: 80%;
   margin: 2rem auto;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
