--- a/frontend/src/components/SpotDetails/SpotDetails.css
+++ b/frontend/src/components/SpotDetails/SpotDetails.css
@@ -9,7 +9,6 @@
   background-color: #fff;
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 /* Images */
@@ -17,28 +16,39 @@
 .spot-images {
   display: flex;
   width: 100%;
+  max-height: 500px;
   justify-content: space-between;
   margin-top: 2rem;
 }
 
+.large-image-wrapper {
+  flex: 2;
+  max-width: 50%;
+  display: inline-block;
+}
+
 .large-image {
-  flex: 2;  /* take more space */
-  max-width: 60%; /* max width for the larger image */
-  height: auto;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.small-image-wrapper {
+  flex: 2;
+  display: inline-block;
+  max-height: 200px;
+  width: inherit;
 }
 
 .small-images {
-  flex: 1;  /* take less space */
+  flex: 1; /* take less space */
   display: grid;
-  grid-template-columns: 1fr 1fr;  /* 2x2 grid layout */
-  gap: 10px; /* spacing between small images */
-  justify-items: center;
-  align-items: center;
+  grid-template-columns: 1fr 1fr; /* 2x2 grid layout */
 }
 
 .small-image {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -50,9 +60,9 @@ p {
   color: #333;
 }
 
-h1 {
+h1.spot-details-title {
   font-size: 2rem;
   color: #444;
-  text-align: center;
+  text-align: left;
   margin-bottom: 1rem;
 }
