--- a/frontend/src/components/SpotTile/SpotTile.css
+++ b/frontend/src/components/SpotTile/SpotTile.css
@@ -30,4 +30,10 @@
   display: flex;
   gap: 0.5rem;
   margin-top: 0.5rem;
+  width: 50%;
+}
+
+.spot-city-state-rating-wrapper {
+  display: flex;
+  justify-content: space-between;
 }
