Render Bugs Part 2

--- a/frontend/src/components/CreateSpotForm/CreateSpotForm.css
+++ b/frontend/src/components/CreateSpotForm/CreateSpotForm.css
@@ -39,7 +39,7 @@ button:hover {
   font-size: 16px;
   margin-top: 0px;
   margin-bottom: 20px;
-  color: #555; /* Some subtle color for caption */
+  color: #555;
 }
 
 .description-textarea {
@@ -49,7 +49,7 @@ button:hover {
   border: 1px solid #ccc;
   border-radius: 4px;
   font-size: 16px;
-  resize: vertical; /* Allows the user to resize the textarea vertically */
+  resize: vertical;
 }
 
 .section-container {
@@ -158,7 +158,7 @@ h3.create-spot-headers {
 }
 
 .dollar-sign {
-  margin-right: 5px; /* adjust as necessary for spacing */
+  margin-right: 5px;
 }
 
 .name-error-wrapper {
