--- a/frontend/src/components/ReviewFormModal/ReviewFormModal.css
+++ b/frontend/src/components/ReviewFormModal/ReviewFormModal.css
@@ -18,7 +18,7 @@ textarea.review-form-modal-input {
 
 .star-rating {
   display: flex;
-  gap: 8px; /* Spacing between stars */
+  gap: 8px;
   margin-top: 15px;
   justify-content: center;
   align-items: center;
