--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,4 +1,3 @@
-/* Add a base style for the login modal */
 h1 {
   text-align: center;
   color: #333;
@@ -6,8 +5,8 @@ h1 {
 }
 
 form {
-  width: 400px; /* Limit the width of the form for better aesthetics */
-  margin: 0 auto; /* Center the form */
+  width: 400px;
+  margin: 0 auto;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -15,37 +14,37 @@ form {
 }
 
 label {
-  display: block; /* Make each label take the full width */
+  display: block;
   margin-bottom: 10px;
   font-size: 16px;
   color: #666;
 }
 
 input {
-  width: 100%; /* Make the input fields take the full width of the form */
-  padding: 10px; /* Add some padding for better touch feeling */
+  width: 100%;
+  padding: 10px;
   margin-top: 5px;
-  border: 1px solid #ddd; /* Add a subtle border */
-  border-radius: 5px; /* Slightly round the corners */
+  border: 1px solid #ddd;
+  border-radius: 5px;
   font-size: 16px;
-  transition: border-color 0.3s; /* Animate the border color */
+  transition: border-color 0.3s;
 }
 
 input:focus {
-  border-color: #007bff; /* Change border color to a blue shade when focused */
-  outline: none; /* Remove the browser's default outline */
+  border-color: #007bff;
+  outline: none;
 }
 
 button {
-  width: 100%; /* Make the button take the full width of the form */
-  padding: 10px 15px; /* Add some padding for a better touch feeling */
-  background-color: #007bff; /* A blue shade */
-  color: #fff; /* White text color */
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #fff;
   font-size: 16px;
-  border: none; /* Remove the default border */
-  border-radius: 5px; /* Slightly round the corners */
-  cursor: pointer; /* Change cursor to pointer when hovering over the button */
-  transition: background-color 0.3s; /* Animate the background color */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 button:disabled {
@@ -57,10 +56,9 @@ button:disabled:hover {
 }
 
 button:hover {
-  background-color: #0056b3; /* A slightly darker blue shade when hovering */
+  background-color: #0056b3;
 }
 
-/* Display the error message in a red color */
 p {
   color: red;
   font-size: 14px;
