--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,75 +5,74 @@ ul {
 }
 
 NavLink {
-  text-decoration: none; /* Removes default link underline */
-  color: #333; /* Sets default link color */
-  transition: color 0.3s; /* Smooth transition for color changes */
+  text-decoration: none;
+  color: #333;
+  transition: color 0.3s;
 }
 
 NavLink:hover {
-  color: #007bff; /* Changes color when hovered */
+  color: #007bff;
 }
 
 NavLink.active {
-  color: #007bff; /* Indicates the active link */
-  font-weight: bold; /* Makes active link bold */
+  color: #007bff;
+  font-weight: bold;
 }
 
-/* Profile Dropdown Styles */
 .profile-dropdown {
   flex-direction: column;
-  position: absolute; /* Positions the dropdown relative to the button */
-  right: 0; /* Aligns dropdown to the right of the button */
-  width: 200px; /* Adjust width as needed */
-  border: 1px solid #ddd; /* Adds a subtle border */
-  border-radius: 5px; /* Slightly rounds corners */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow */
-  background-color: #fff; /* White background */
-  z-index: 10; /* Ensures dropdown appears above other content */
-  list-style-type: none; /* Removes bullet points */
-  padding: 0; /* Removes default padding */
+  position: absolute;
+  right: 0;
+  width: 200px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  z-index: 10;
+  list-style-type: none;
+  padding: 0;
 }
 
 .profile-dropdown.hidden {
-  display: none; /* Hides the dropdown */
+  display: none;
 }
 
 .profile-dropdown li {
-  padding: 10px 5px; /* Adds spacing within dropdown items */
-  cursor: pointer; /* Indicates an interactive element */
+  padding: 10px 5px;
+  cursor: pointer;
 }
 
 .profile-dropdown li:hover {
-  background-color: #f5f5f5; /* Changes background when hovered */
+  background-color: #f5f5f5;
 }
 
 .profile-dropdown button {
-  width: 100%; /* Takes full width of the dropdown */
-  padding: 10px 0; /* Padding top and bottom */
-  background: none; /* No background color */
-  border: none; /* No border */
-  font-size: 16px; /* Adjust font size as needed */
-  cursor: pointer; /* Indicates an interactive element */
-  text-align: left; /* Aligns text to the left */
+  width: 100%;
+  padding: 10px 0;
+  background: none;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: left;
 }
 
 .profile-dropdown button:hover {
-  background-color: #f5f5f5; /* Changes background when hovered */
+  background-color: #f5f5f5;
 }
 
 .home-logo {
   margin: 10px;
-  height: 40px; /* Keeps the aspect ratio of the image */
-  display: block; /* Makes the image a block element to remove unwanted space */
+  height: 40px;
+  display: block;
 }
 
 button {
   background-color: transparent;
   border: none;
   cursor: pointer;
-  outline: none; /* removes the default browser outline on focus */
-  font-size: 24px; /* adjust as needed */
-  color: #333; /* you can pick your color here */
+  outline: none;
+  font-size: 24px;
+  color: #333;
 }
 
 .fas.fa-user-circle {
